Convert balance lookup form to use POST
GET seems right as a balance look-up is a read, but CSRF protection is
desirable in this situation.

--- a/accounts/templates/accounts/balance_check.html
+++ b/accounts/templates/accounts/balance_check.html
@@ -24,7 +24,8 @@
 
 {% block content %}
 
-<form action="." method="get">
+<form action="." method="post">
+	{% csrf_token %}
 	{% include 'partials/form_fields.html' %}
 	<button type="submit" class="btn btn-large">Fetch account details</button>
 </form>
